--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,32 +4,55 @@
   "private": true,
   "dependencies": {
     "@amraneze/react-instagram-login": "^3.0.3",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@apollo/client": "^3.7.10",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@greatsumini/react-facebook-login": "^3.3.1",
     "@mui/icons-material": "^5.11.0",
+    "@mui/joy": "^5.0.0-alpha.70",
     "@mui/material": "^5.11.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.12",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "apollo-server-cloud-functions": "^3.12.0",
+    "assert": "^2.0.0",
+    "cloudmailin": "^0.0.3",
+    "email-verification-code": "^2.0.4",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "graphql": "^16.6.0",
+    "https": "^1.0.0",
+    "https-browserify": "^1.0.0",
+    "latest": "^0.2.0",
+    "mongoose": "^7.0.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "nodemailer": "^6.9.1",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-icons": "^4.8.0",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-twitter-login": "^1.5.0",
+    "setimmediate": "^1.0.5",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^4.19.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,5 +72,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
   }
 }
